hphp/hack/test/typecheck/constraint_gen_fail3.php.exp
File "constraint_gen_fail3.php", line 24, characters 19-21:
Member get has the wrong type (Typing[4341])
File "constraint_gen_fail3.php", line 20, characters 26-27:
Expected ?A
File "constraint_gen_fail3.php", line 23, characters 9-9:
But got T
File "constraint_gen_fail3.php", line 24, characters 27-27:
  via this generic T
